@@ -484,6 +484,7 @@ class Populator(BasePopulator):
                 build_cell(Organisation, 'legal_form'),
                 build_cell(Organisation, 'sector'),
                 build_cell(Organisation, 'capital'),
+                build_cell(Organisation, 'code'),
                 build_cell(Organisation, 'siren'),
                 build_cell(Organisation, 'naf'),
                 build_cell(Organisation, 'siret'),
@@ -520,6 +521,7 @@ class Populator(BasePopulator):
                 build_cell(Organisation, 'staff_size'),
                 build_cell(Organisation, 'sector'),
                 build_cell(Organisation, 'capital'),
+                build_cell(Organisation, 'code'),
                 build_cell(Organisation, 'siren'),
                 build_cell(Organisation, 'naf'),
                 build_cell(Organisation, 'siret'),
