@@ -30,6 +30,7 @@ class OrganisationMassImportTestCase(MassImportBaseTestCaseMixin,
         'fax_colselect':            0,
         'phone_colselect':          0,
         'description_colselect':    0,
+        'code_colselect':           0,
         'siren_colselect':          0,
         'naf_colselect':            0,
         'annual_revenue_colselect': 0,
